--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
         pip install -r requirements.txt
     - name: Run black
       run: |
-        black
+        black src/
     - name: Run Flake8
       run: |
         flake8
